# firecracker

./: Cargo.toml
devices/: Cargo.toml
devices/src/: bus.rs  lib.rs
devices/src/legacy/: serial.rs
devices/src/virtio/: block.rs
resources/: vfio-bind.sh
src/api_server/src/: parsed_request.rs
src/api_server/src/request/: device.rs  mod.rs
src/api_server/swagger/: firecracker.yaml
src/arch/src/: lib.rs
src/arch/src/x86_64/: layout.rs  msr.rs
src/cpuid/src/: brand_string.rs
src/devices/: Cargo.toml
src/devices/benches/: main.rs
src/devices/src/: bus.rs
src/devices/src/legacy/: i8042.rs  rtc_pl031.rs  serial.rs
src/devices/src/pseudo/: boot_timer.rs
src/devices/src/virtio/: mmio.rs  net.rs
src/devices/src/virtio/block/: device.rs  event_handler.rs  persist.rs
src/devices/src/virtio/net/: persist.rs
src/devices/src/virtio/vsock/: device.rs
src/firecracker/: Cargo.toml
src/firecracker/src/: main.rs
src/logger/src/: metrics.rs
src/memory_model/: Cargo.toml
src/memory_model/src/: guest_address.rs  guest_memory.rs  lib.rs  mmap.rs
src/pci/: Cargo.toml
src/pci/src/: bus.rs  configuration.rs  device.rs  lib.rs  msix.rs  vfio.rs
src/snapshot/: Cargo.toml
src/snapshot/benches/: basic.rs  snapshot_benchmark.rs
src/snapshot/src/: adapter.rs  lib.rs  primitives.rs  struct.rs  structs.rs  version_map.rs  write_code_pls.rs
src/snapshot_derive/: Cargo.toml
src/snapshot_derive/src/: common.rs  descriptor.rs  enum_field.rs  lib.rs  struct_field.rs  union_field.rs  versionize.rs
src/uffd/: Cargo.toml
src/uffd/src/: gen.rs  lib.rs  main.rs  mmap.rs  simple.rs
src/utils/src/: lib.rs
src/vm-allocator/: Cargo.toml
src/vm-device/: Cargo.toml
src/vm-memory/src/: lib.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  interrupt.rs  lib.rs  memory_snapshot.rs  persist.rs  resources.rs  rpc_interface.rs  uffd_config.rs  vstate.rs
src/vmm/src/default_syscalls/: filters.rs
src/vmm/src/device_manager/: legacy.rs  mmio.rs
src/vmm/src/vmm_config/: device.rs  mod.rs
src/vmm/src/vstate/: vm.rs
src/vmm/src/vstate/vcpu/: mod.rs  x86_64.rs
tests/framework/: builder.py  microvm.py
tests/integration_tests/functional/: test_serial_io.py
tests/integration_tests/performance/: test_snapshot_perf.py
tools/rmc/: Dockerfile  build-container.sh  shell.sh
vmm/src/: lib.rs
vmm/src/device_manager/: legacy.rs  mmio.rs
