[package]
name = "snapshot"
version = "0.0.1"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
# build = "src/write_code_pls.rs"

[dependencies]
serde = ">=1.0.27"
serde_derive = ">=1.0.27"
bincode = "1.2.1"
utils = { path="../utils" }
snapshot_derive = { path = "../snapshot_derive" }
memmap = "0.7.0"
serde_json = "1.0.45"
kvm-bindings = { version = ">=0.2", features = ["fam-wrappers"] }

[dev-dependencies]
criterion = "0.3.0"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
array_tool = "1.0.3"
syn = { version = "1.0.13", features=["default","full"]}
snapshot_derive = { path = "../snapshot_derive" }

[[bench]]
name = "snapshot_benchmark"
harness = false